# laplace_bie_solver

./: CMakeLists.txt
api/: BIELaplace.h  main_exe  main_test  main_test.x
cmake/: FindcblasLib.cmake  FindvecLib.cmake
src/: computeError.c  computeSolution.c  init.c  initFunction.c  learningComplex.c  main.c  solveDensity.c  solveDensity_GMRES.c  solveDensity_lapack.c  solveLapl.c  specialquadlapl.c  testBLAS.c  testLAPACK.c
testLaplace/: testBlas.c
